<resources>
    <string name="app_name">Straight Neck Blocker</string>
    <string name="open_source_license">Open source license</string>

    <string name="notification_msg_patch">Patch: %s</string>

    <string name="notification_status_none">Measuring…</string>
    <string name="notification_status_stay">Fixed</string>
    <string name="notification_status_nice">Good angle</string>
    <string name="notification_status_bad">Bad attitude!</string>
    <string name="notification_status_lie">Lie?</string>

    <string name="msg1">ストレートネックブロッカーは、スマホの角度を監視し、適切な角度で使用することをサポートします。</string>
    <string name="msg2">一定時間 30度 以上傾けていると、警告が表示されます。</string>
    <string name="msg3">平安歌人になったような気持ちでスマホを持ち、顔を上げて操作しましょう。</string>

    <string name="msg_pause">Pause temporarily</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_disable">Disable</string>
</resources>
