<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.nagopy.android.straightneckblocker.viewmodel.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />

            <TextView
                android:id="@+id/msg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ad"
                android:layout_marginTop="@dimen/activity_main_text_margin"
                android:drawablePadding="@dimen/activity_main_text_margin"
                android:drawableStart="@mipmap/ic_normal"
                android:text="@string/msg1" />

            <TextView
                android:id="@+id/msg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg1"
                android:layout_marginTop="@dimen/activity_main_text_margin"
                android:drawablePadding="@dimen/activity_main_text_margin"
                android:drawableStart="@mipmap/ic_bad"
                android:text="@string/msg2" />

            <TextView
                android:id="@+id/msg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg2"
                android:layout_marginTop="@dimen/activity_main_text_margin"
                android:drawablePadding="@dimen/activity_main_text_margin"
                android:drawableStart="@mipmap/ic_good"
                android:text="@string/msg3" />

            <ToggleButton
                android:id="@+id/btnEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg3"
                android:layout_marginTop="@dimen/activity_main_text_margin"
                android:checked="@{vm.isServiceEnabled}"
                android:onClick="@{vm::onClickToggleBtn}"
                android:textOff="@string/btn_disable"
                android:textOn="@string/btn_enable" />

        </RelativeLayout>
    </ScrollView>
</layout>